src/objects/CPR__c.object
<CustomObject>
    <fields>
        <fullName>Project_Id_Backup__c</fullName>
        <label>Project Id Backup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Backup__c</fullName>
        <label>Project Status Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Cycle_Time__c</fullName>
        <label>Quote Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Generation_Date__c</fullName>
        <label>Quote Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_to_PO_Cycle_Time__c</fullName>
        <label>Quote to PO Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_cancel__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Error</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quote no longer required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Changed Drastically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Customer_Hold__c</fullName>
        <label>Reason for Customer Hold</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports_From__c</fullName>
        <label>Reports From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <label>Reports To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEMSC_Assigned_Date__c</fullName>
        <label>SEMSC Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEMSC_Cycle_Time__c</fullName>
        <label>SEMSC Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEMSC_Submitted_Date__c</fullName>
        <label>SEMSC Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SE_Assigned_Date__c</fullName>
        <label>SE Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SE_Cycle_Time__c</fullName>
        <label>SE Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SE_FE_SEMSC_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SE FE SEMSC Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SE_MSC_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE MSC Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Submitted_Date__c</fullName>
        <label>SE Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle_Time__c</fullName>
        <label>Sales Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Deliverable_Start_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Deliverable Start 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Times_CPR_was_Resubmitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Times CPR was Resubmitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NQT CPR</label>
    <listViews>
        <fullName>Active_CPRs</fullName>
        <columns>NAME</columns>
        <columns>NQT_Project_Status__c</columns>
        <columns>NQT_Deliverable_Status__c</columns>
        <columns>NQT_CPR_Name__c</columns>
        <columns>NQT_Area__c</columns>
        <columns>NQT_Market__c</columns>
        <columns>NQT_CPR_Start_Date__c</columns>
        <columns>NQT_FE_Deliverables_submit__c</columns>
        <columns>NQT_SE_Deliverables_Submitted__c</columns>
        <columns>NQT_SE_MSC_Deliverables_Submitted__c</columns>
        <columns>NQT_SE__c</columns>
        <columns>NQT_SE_MSC__c</columns>
        <columns>NQT_FE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NQT_Project_Status__c</field>
            <operation>notContain</operation>
            <value>Customer Hold,Quote Closed,Quote Expired,Cancelled,Quote Submitted</value>
        </filters>
        <label>Active CPRs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NQT_Project_Status__c</columns>
        <columns>NQT_Deliverable_Status__c</columns>
        <columns>NQT_CPR_Name__c</columns>
        <columns>NQT_Area__c</columns>
        <columns>NQT_Market__c</columns>
        <columns>NQT_CPR_Start_Date__c</columns>
        <columns>NQT_FE_Deliverables_submit__c</columns>
        <columns>NQT_SE_Deliverables_Submitted__c</columns>
        <columns>NQT_SE_MSC_Deliverables_Submitted__c</columns>
        <columns>NQT_SE__c</columns>
        <columns>NQT_SE_MSC__c</columns>
        <columns>NQT_FE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>NQTAccountManager477711</role>
            <role>NQTBusinessOperations477711</role>
            <role>NQTCustomer477711</role>
            <role>NQTFE477711</role>
            <role>NQTProgramManager477711</role>
            <role>NQTSE477711</role>
            <role>NQTSEMSC477711</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPRs_PWR_Required</fullName>
        <columns>NAME</columns>
        <columns>NQT_CPR_Name__c</columns>
        <columns>NQT_Account_Manager__c</columns>
        <columns>NQT_Program_Manager__c</columns>
        <columns>NQT_CPR_Start_Date__c</columns>
        <columns>PWR_Approval_Request_Sent__c</columns>
        <columns>PWR_Approval_Final_Feedback_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PWR__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NQT_Project_Status__c</field>
            <operation>notContain</operation>
            <value>,Request in Progress,Customer Hold,Request Submitted,Request In-Review,Reques,Cu</value>
        </filters>
        <label>CPRs - PWR Required</label>
        <sharedTo>
            <role>NQTAdmin477711</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chad</fullName>
        <columns>NAME</columns>
        <columns>NQT_CPR_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NQT_Project_Status__c</columns>
        <columns>NQT_Deliverable_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NQT_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Schmelzer</value>
        </filters>
        <filters>
            <field>NQT_Project_Status__c</field>
            <operation>equals</operation>
            <value>Quote Submitted</value>
        </filters>
        <filters>
            <field>NQT_Deliverable_Status__c</field>
            <operation>equals</operation>
            <value>Waiting For PO</value>
        </filters>
        <label>Chad&apos;s CPRs</label>
        <sharedTo>
            <roleAndSubordinates>NQTAccountManager477711</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_CPRs</fullName>
        <columns>NQT_CPR_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>NQT_Account_Manager__c</columns>
        <columns>NQT_Program_Manager__c</columns>
        <columns>NQT_Market__c</columns>
        <columns>NQT_Area__c</columns>
        <columns>NQT_CPR_Name__c</columns>
        <columns>NQT_SE_MSC__c</columns>
        <filterScope>Mine</filterScope>
        <label>My CPRs</label>
        <sharedTo>
            <role>NQTAccountManager477711</role>
            <role>NQTProgramManager477711</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPR-{000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPRs</pluralLabel>
    <recordTypes>
        <fullName>CPR_Closed_Cancelled</fullName>
        <active>true</active>
        <label>CPR Closed/Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Customer_Hold</fullName>
        <active>true</active>
        <label>CPR Customer Hold</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Milestone</fullName>
        <active>true</active>
        <label>CPR Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Open</fullName>
        <active>true</active>
        <label>CPR Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Project_Deliverables</fullName>
        <active>true</active>
        <label>CPR Project Deliverables</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Review</fullName>
        <active>true</active>
        <label>CPR Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Sales_Deliverables</fullName>
        <active>true</active>
        <label>CPR Sales Deliverables</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Team_Assignment</fullName>
        <active>true</active>
        <label>CPR Team Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPR_Update_Project</fullName>
        <active>true</active>
        <label>CPR Update Project</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>FE__c</fullName>
        <label>FE</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MSC__c</fullName>
        <label>MSC</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PROJMGR__c</fullName>
        <label>PROJMGR</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SE__c</fullName>
        <label>SE</label>
    </sharingReasons>
    <validationRules>
        <fullName>Account_Manager</fullName>
        <active>false</active>
        <description>Account Manager is required</description>
        <errorConditionFormula>if(isnew(),ISPICKVAL( NQT_Account_manager_Picklist__c ,&quot;&quot;),false)</errorConditionFormula>
        <errorDisplayField>NQT_Account_manager_Picklist__c</errorDisplayField>
        <errorMessage>Account Manager is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area</fullName>
        <active>true</active>
        <description>Area is required</description>
        <errorConditionFormula>if(isnew(),ISPICKVAL( NQT_Area__c , &quot;&quot;),false)</errorConditionFormula>
        <errorDisplayField>NQT_Area__c</errorDisplayField>
        <errorMessage>Area is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPR_Name</fullName>
        <active>true</active>
        <description>CPR Name is required</description>
        <errorConditionFormula>if(isnew(),ISBLANK( NQT_CPR_Name__c ),false)</errorConditionFormula>
        <errorDisplayField>NQT_CPR_Name__c</errorDisplayField>
        <errorMessage>CPR Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPR_Start_Date</fullName>
        <active>true</active>
        <description>CPR Start Date</description>
        <errorConditionFormula>OR(ISBLANK( NQT_CPR_Start_Date__c ),  NQT_CPR_Start_Date__c  &gt; NOW())</errorConditionFormula>
        <errorDisplayField>NQT_CPR_Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a current date or date in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Contact_Name</fullName>
        <active>true</active>
        <description>Contact Name is required</description>
        <errorConditionFormula>if(isnew(),ISBLANK( NQT_Customer_Contact_Phone__c ),false)</errorConditionFormula>
        <errorDisplayField>NQT_Customer_contact_Name__c</errorDisplayField>
        <errorMessage>Contact Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Contact_Phone</fullName>
        <active>true</active>
        <description>Contact Phone number is required</description>
        <errorConditionFormula>if(isnew(),ISBLANK( NQT_Customer_Contact_Phone__c ),false)</errorConditionFormula>
        <errorDisplayField>NQT_Customer_Contact_Phone__c</errorDisplayField>
        <errorMessage>Contact Phone number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Email_Address</fullName>
        <active>true</active>
        <description>Contact Email Address is required</description>
        <errorConditionFormula>if(isnew(),ISBLANK( NQT_Customer_Email_Address__c ),false)</errorConditionFormula>
        <errorDisplayField>NQT_Customer_Email_Address__c</errorDisplayField>
        <errorMessage>Contact Email Address is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MTSO</fullName>
        <active>true</active>
        <description>MTSO is required</description>
        <errorConditionFormula>if(isnew(),ISBLANK(  NQT_MTSO__c ),false)</errorConditionFormula>
        <errorDisplayField>NQT_MTSO__c</errorDisplayField>
        <errorMessage>MTSO is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Market</fullName>
        <active>true</active>
        <description>Market is required</description>
        <errorConditionFormula>if(isnew(),ISPICKVAL(  NQT_Market__c  , &quot;&quot;),false)</errorConditionFormula>
        <errorDisplayField>NQT_Market__c</errorDisplayField>
        <errorMessage>Market is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PWR_Approval_Validation</fullName>
        <active>false</active>
        <description>Validation for Pricing War Room Approval</description>
        <errorConditionFormula>AND(
PWR__c , 

OR (
ISBLANK( PWR_Approval_Request_Sent__c ),
ISBLANK( PWR_Approval_Final_Feedback_Received__c )
)
)</errorConditionFormula>
        <errorDisplayField>PWR__c</errorDisplayField>
        <errorMessage>Please indicate the date Pricing War Room Approval was sent and the date of final approval from Pricing War Room.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Manager</fullName>
        <active>false</active>
        <description>Program Manager is required</description>
        <errorConditionFormula>if(isnew(),ISPICKVAL(  NQT_Program_Manager_Picklist__c ,&quot;&quot;),false)</errorConditionFormula>
        <errorDisplayField>NQT_Program_Manager_Picklist__c</errorDisplayField>
        <errorMessage>Program Manager is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Quote_Delivery_Date</fullName>
        <active>true</active>
        <description>Please Enter a date in future</description>
        <errorConditionFormula>if(ISNEW(), OR( ISBLANK(  NQT_Requested_Quote_Delivery_Date__c  ) ,  NQT_Requested_Quote_Delivery_Date__c  &lt; Now()),False)</errorConditionFormula>
        <errorDisplayField>NQT_Requested_Quote_Delivery_Date__c</errorDisplayField>
        <errorMessage>Please Enter a date in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_request</fullName>
        <active>true</active>
        <description>Type of request</description>
        <errorConditionFormula>if(isnew(),ISPICKVAL( NQT_Type_Of_Request__c, &quot;&quot; ),false)</errorConditionFormula>
        <errorDisplayField>NQT_Type_Of_Request__c</errorDisplayField>
        <errorMessage>Please select type of request</errorMessage>
    </validationRules>
</CustomObject>